--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 $baseColor: #b0bec5;
 $primaryColor: #9e9e9e;
 $secondaryColor: #5a5a5a;
+$textColor: #000000;
 
 .background {
   background-color: $baseColor;
@@ -15,4 +16,9 @@ mat-icon {
 
 mat-dialog-container {
   padding: 0px !important;
+}
+
+.snack-bar {
+  color: $textColor;
+  background-color: $baseColor;
 }
