--- a/src/app/modules/profile/modal/new-publication/new-publication.component.scss
+++ b/src/app/modules/profile/modal/new-publication/new-publication.component.scss
@@ -1,4 +1,4 @@
-.post-spinner {
+.publication-spinner {
   position: fixed;
   left: 45%;
   top: 45%;
@@ -9,23 +9,23 @@
   pointer-events: none;
 }
 
-.new-post {
+.new-publication {
   height: 100%;
 }
 
-.new-post-title {
+.new-publication-title {
   width: 90%;
 }
 
-.new-post-text {
+.new-publication-text {
   width: 90%;
 }
 
-.new-post-image {
+.new-publication-image {
   width: 90%;
 }
 
-.label-add-new-post {
+.label-add-new-publication {
   width: 100%;
   margin: 40px;
 }
