--- a/src/app/modules/profile/publication/publication.component.scss
+++ b/src/app/modules/profile/publication/publication.component.scss
@@ -1,15 +1,15 @@
 @import '../../../app.component.scss';
 @import '../../../../styles.scss';
 
-.post-card {
+.publication-card {
   margin: 5px;
 }
 
-.post-image {
+.publication-image {
   border: solid 1px #cad3dc;
 }
 
-.post-text {
+.publication-text {
   margin: 1% !important;
   height: 50% !important;
 }
@@ -29,7 +29,7 @@
   position: relative;
 }
 
-.post-text .read-more {
+.publication-text .read-more {
   position: absolute;
   bottom: 0;
   left: 0;
