fix phone directive

--- a/src/app/modules/home/login/login.component.html
+++ b/src/app/modules/home/login/login.component.html
@@ -17,7 +17,7 @@
         </mat-grid-tile>
 
         <mat-grid-tile>
-          <mat-form-field class="">
+          <mat-form-field>
             <input
               type="password"
               matInput
