fix fetch , default email

--- a/src/app/modules/profile/modal/new-publication/new-publication.component.html
+++ b/src/app/modules/profile/modal/new-publication/new-publication.component.html
@@ -48,7 +48,7 @@
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="1" [rowspan]="1">
-      <button mat-button (click)="onCancel()">Cancel</button>
+      <button mat-button (click)="cancel()">Cancel</button>
       <button mat-button [disabled]="form.invalid" type="submit">Save</button>
     </mat-grid-tile>
   </form>
