--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -26,6 +26,7 @@
                     class="search-title"
                     *ngFor="let publication of searchPublications$ | async"
                     [value]="publication.title"
+                    (click)="clickSearchResult(publication.title)"
                   >
                     <span [innerHTML]="publication.title | highlight: search.value"></span>
                   </mat-option>
